[package]
name = "git-branch-change"
version = "0.1.0"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jajuojan/git-branch-change"
edition = "2021"

[dependencies]
git2 = "0.15"
console = "0.15.2"

[dependencies.dialoguer]
version = "0.10.1"
features = ["fuzzy-select"]
git = "https://github.com/jajuojan/dialoguer"
branch = "git-branch-change_modifications"
