[package]
edition = "2021"
license = "MIT"
name = "git-branch-change"
readme = "README.md"
repository = "https://github.com/jajuojan/git-branch-change"
version = "0.1.0"

[dependencies]
console = "0.15.7"
git2 = "0.17"

[dependencies.dialoguer]
branch = "git-branch-change_modifications"
features = ["fuzzy-select"]
git = "https://github.com/jajuojan/dialoguer"
version = "0.10.1"
